# gbatest

./: CMakeLists.txt  Makefile  README.md
cmake/Modules/: GBAEnv.cmake  GBAMacros.cmake
src/: test.c  test.cpp
